--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/draft-js": "^0.10.37",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.8",
     "@types/react": "16.9.11",
@@ -11,11 +10,10 @@
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.2",
     "@types/styled-components": "^4.4.0",
-    "@types/uuid": "^3.4.6",
-    "draft-js": "^0.11.2",
     "firebase": "^7.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-quill": "^1.3.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
