--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.1",
     "styled-components": "^4.4.1",
     "typescript": "3.7.2",
     "uuid": "^3.3.3"
